// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render required = true shaperound - value[0] 1`] = `
.emotion-0 {
  border-radius: 16px;
}

<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render required = true sizedefault - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render required = true sizelarge - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 40px;"
/>
`;

exports[`Render required = true sizesmall - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 24px;"
/>
`;

exports[`Render shaperound - value[0] 1`] = `
.emotion-0 {
  border-radius: 16px;
}

<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render sizedefault - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 32px;"
/>
`;

exports[`Render sizelarge - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 40px;"
/>
`;

exports[`Render sizesmall - value[0] 1`] = `
<div
  class="skeleton emotion-0"
  style="width: 100%; height: 24px;"
/>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema shaperound 1`] = `true`;

exports[`Test Schema shaperound 2`] = `null`;

exports[`Test Schema sizedefault 1`] = `true`;

exports[`Test Schema sizedefault 2`] = `null`;

exports[`Test Schema sizelarge 1`] = `true`;

exports[`Test Schema sizelarge 2`] = `null`;

exports[`Test Schema sizesmall 1`] = `true`;

exports[`Test Schema sizesmall 2`] = `null`;
